NAS-2326 Enabled AggregationWorkerTest again after removing reuseFork option.
Also moved a couple of tests to core module and removed settings of the standard '-DXXX' NAS test options, as these are irrelevant for the wayback tests.