@@ -85,20 +85,8 @@
 
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>
-            -Xmx768m
-            -Dfile.encoding=UTF-8
-            -Ddk.netarkivet.settings.file=tests/dk/netarkivet/test-settings.xml
-            -Djava.security.manager
-            -Djava.security.policy=tests/dk/netarkivet/ant-test.policy
-            -Dorg.archive.crawler.frontier.AbstractFrontier.queue-assignment-policy=org.archive.crawler.frontier.HostnameQueueAssignmentPolicy,org.archive.crawler.frontier.IPQueueAssignmentPolicy,org.archive.crawler.frontier.BucketQueueAssignmentPolicy,org.archive.crawler.frontier.SurtAuthorityQueueAssignmentPolicy,org.archive.crawler.frontier.TopmostAssignedSurtQueueAssignmentPolicy,dk.netarkivet.harvester.harvesting.DomainnameQueueAssignmentPolicy
-            -Duser.language=en -Duser.country=US -Duser.variant=US
-          </argLine>
-          <forkCount>1</forkCount>
-          <reuseForks>false</reuseForks>
           <includes>
             <!-- consider all java files as tests -->
             <include>**/*Test*</include>
